--- a/src/features/customer/customer.css
+++ b/src/features/customer/customer.css
@@ -1,3 +1,15 @@
 .nameLabel {
   margin: 10px;
+  border: none;
+  border-bottom: 1px solid #000;
+  background: transparent;
+  width: 220px;
+  padding: 5px;
+  margin-top: 5px;
+  font-weight: 400;
 }
+
+.nameLabel:focus {
+  outline: none
+}
+
